# WWF-Open-Source-311-Template

./: .env.example  .gitignore  COMPLIANCE.md  COST.md  Caddyfile  DEPLOY_FIXES.sh  EMERGENCY_RECOVERY.md  FIND_AND_RESTART.md  FIX_CURRENT_SERVER.md  LICENSE  QUICK_START.md  README.md  TROUBLESHOOTING_GUIDE.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_initial.py  0005_staff_department_links.py  0006_exclusion_tables.py  0007_geo_boundary_road_filters.py  20260203_1911_2237fb926131_add_uptime_records_table.py  20260203_2015_3348fc927232_add_api_usage_records_table.py  add_translations_table.py
backend/app/: __init__.py  main.py  models.py  schemas.py
backend/app/api/: api_usage.py  audit.py  auth.py  comments.py  data_export.py  departments.py  deps.py  gis.py  health.py  open311.py  research.py  services.py  setup.py  social_connections.py  system.py  users.py
backend/app/core/: auth.py  celery_app.py  config.py  encryption.py  logging.py  security.py  telemetry.py
backend/app/db/: init_db.py  init_postgis.sql  session.py
backend/app/middleware/: request_id.py
backend/app/models/: __init__.py  auth.py  settings.py  user.py
backend/app/schemas/: auth.py  issue.py  settings.py  user.py
backend/app/services/: ai.py  api_usage.py  arcgis.py  auth0_service.py  backup_service.py  email_templates.py  geocoding.py  gis.py  google_maps.py  notifications.py  oauth_service.py  retention_service.py  translation.py  (+7 more)
(+141 files in other folders)
